
LBLRTM_v9.0

1) Implementation of analytic Jacobians/derivatives in LBLRTM. This effort was supported 
   by EUMETSAT and designed to require a minimal amount of setup on the part of 
   the user while exploiting pre-existing LBLRTM calculation options.  Refer to user
   instructions and additional documentation for more details.   
   (H. Snell, M.W. Shephard, S.A. Clough, and S. Tjemkes)  

LBLRTM_v8.4

1) Minor bug fixs to the LOWTRAN7 routin in LBLRTM (lbllow.f) that
   includes the moving of an ENDIF to the proper location and the
   proper alignment of ZMDL and ALTZ arrays
   (S.A. Clough and S. Shald)

2) In the continuum module, the coding of the partial pressure of water vapor has
   been simplified by introducing a varaiable h2o_frac.  The factor of 1.e-20 has
   been removed from Wtot.  In conjunction with this, the factor of 1e-20 has been 
   removed from the calculation of fractions for the other species, including the 
   Rayleigh scattering section.
   (S.A. Clough)

3) The common blocks in several subroutines have been modified to eliminate compiler
   Warning Messages
   (S.A. Clough)

4) Minor bug fix in postsub.f 
   (S.A. Clough)

5) Changes to xmerge.f to get it ready for analytic derivation implementation. 
   (H. Snell)


LBLRTM_v8.3

1) Minor bug fix in SCNMRG subroutine.
   (M.W. Shephard and J. Gu)

LBLRTM_v8.2

1) Minor bug fix to the LOWTRAN7 routine in LBLRTM (lbllow.f), which accounts
   for clouds and aerosols.
   (S.A. Clough)

2) Added makefiles and utilities to run LBLRTM on LINUX INTEL.
   (M.W. Shephard and H. Nair) 

LBLRTM_v8.1


1) The partition function routine has been changed to TIPS_2003
    Fischer,J., R.R. Gamache, A. Goldman, L.S. Rothman and A. Perrin.
    Total internal partition sums for molecular species in the 2000
    edition of the HITRAN database, JQSRT 2003;82:401-412.
    (S.A. Clough)

2) The number of molecules that can be handled is 38, consistent with 
   HITRAN 2000.
   (S.A. Clough)
