@@ -12,7 +12,7 @@ PLATFORM = OS_X (Absoft)
 
 FC = f90
 FCFLAG = -s -O -N11   
-OUTPUT = lblrtm_v9.0_voigt_f90_OS_X_sgl
+OUTPUT = lblrtm_v9.1_voigt_f90_OS_X_sgl
 CPATH = src
 CDOTO = os_x_sgl.o
 
