@@ -12,7 +12,7 @@ PLATFORM = AIX
 
 FC = xlf90
 FCFLAG =   -O2 -qfixed=72 -qmaxmem=-1 
-OUTPUT = lblrtm_v9.0_f90_aix_sgl
+OUTPUT = lblrtm_v9.1_f90_aix_sgl
 CPATH = src
 CDOTO = aix_f90_sgl.o
 
