@@ -12,7 +12,7 @@ PLATFORM = LINUX
 
 FC = ifc
 FCFLAG = -r8 -i8 -w -Vaxlib
-OUTPUT = lblrtm_v9.0_intel_linux_dbl_voigt
+OUTPUT = lblrtm_v9.1_intel_linux_dbl_voigt
 CPATH = src
 CDOTO = intel_linux_dbl.o
 
