@@ -12,7 +12,7 @@ PLATFORM = LINUX
 
 FC = pgf90
 FCFLAG =  -fast -r8 -i8
-OUTPUT = lblrtm_v9.0_f90_pgi_linux_dbl
+OUTPUT = lblrtm_v9.1_f90_pgi_linux_dbl
 CPATH = src
 CDOTO = pgi_linux_dbl.o
 
