@@ -12,7 +12,7 @@ PLATFORM = Sun
 
 FC = f77
 FCFLAG = -fast -xtypemap=real:64,double:64,integer:64
-OUTPUT = lblrtm_v9.0_f77_sun_dbl
+OUTPUT = lblrtm_v9.1_f77_sun_dbl
 CPATH = src
 CDOTO = sun_f77_dbl.o
 
